syntax = "proto3";

option go_package = "../pb;pb";

// protoc --go_out=. favorite.proto
// 关注关系方法
message FavoriteActionReq {
  int64 user_id = 1;
  int64 video_id = 2;
  int64 action_type = 3;
}

message FavoriteActionRsp {
  int32 status_code = 1;
  string status_msg = 2;
}

message GetFavoriteVideoIdListReq {
  int64 user_id = 1;
}

message GetFavoriteVideoIdListRsp {
  repeated int64 video_id_list = 1; // 关注者用户信息列表
}


// IsFavoriteVideoDict
message FavoriteUnit {
  int64 user_id = 1;
  int64 video_id = 2;
}

message IsFavoriteVideoDictReq {
  repeated FavoriteUnit favorite_unit_list = 1;
}

message IsFavoriteVideoDictRsp {
  map<string, bool> is_favorite_dict = 1;
}
// **********************

service FavoriteService {
  rpc FavoriteAction(FavoriteActionReq) returns (FavoriteActionRsp); // 关联关系方法
  rpc GetFavoriteVideoIdList(GetFavoriteVideoIdListReq) returns (GetFavoriteVideoIdListRsp); // 获取喜欢的视频列表
  rpc IsFavoriteVideoDict(IsFavoriteVideoDictReq) returns (IsFavoriteVideoDictRsp); // 判断是否喜欢
}



