syntax = "proto3";

option go_package = "../pb;pb";
// protoc --go_out=. relation.proto
import "user.proto";

service RelationService {
  // 关联关系方法
  rpc RelationAction(RelationActionReq) returns (RelationActionRsp);
  // 获取被关注者列表
  rpc GetRelationFollowList(GetRelationFollowListReq) returns (GetRelationFollowListRsp);
  // 获取关注者列表
  rpc GetRelationFollowerList(GetRelationFollowerListReq) returns (GetRelationFollowerListRsp);
  // 获取是否关注
  rpc IsFollowDict(IsFollowDictReq) returns (IsFollowDictRsp);
  // 获取好友列表
}


// ******
message RelationActionReq {
  int64 self_user_id = 1;
  int64 to_user_id = 2;
  int64 action_type = 3;
}

message RelationActionRsp {
  int32 status_code = 1;
  string status_msg = 2;
}
// ******


// ******
message GetRelationFollowListReq {
  int64 user_id = 1;
}

message GetRelationFollowListRsp {
  int32 status_code = 1;
  string status_msg = 2;
  repeated UserInfo user_list = 3;
}
// ******



// ******
message GetRelationFollowerListReq {
  int64 user_id = 1;
}

message GetRelationFollowerListRsp {
  int32 status_code = 1;
  string status_msg = 2;
  repeated UserInfo user_list = 3;
}
// ******


// ******
message IsFollowDictReq {
  int64 user_id = 1;
}

message IsFollowDictRsp {
  map<int64, bool> is_follow_dict = 1;
}
// ******










